# int20h-2026-backend

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0275f98d5374_add_telegram_chat_id.py  0d58b363be2b_timezone_awareness.py  31031020e2a4_added_skills.py  5075f9a0f5ea_added_categories_with_batch_mode.py  b567d301d5bc_baseline.py  c38ff15d6405_a_lot_of_features.py  caf62b643458_telegram_id_is_64bit.py  d1ac99bfaba7_add_telegram_chat_id_to_participants.py  e9f3a1b2c5d8_remove_rate_limit_timestamps.py  fb82e889cd57_make_study_fields_optional.py  fff6572fce47_initial_migration.py
scripts/: README.md  anonymize_seed.py  compute_skills.py  normalize_seed_skills.py  seed.py  skill_aliases.json  skills.json  unis.json
src/: config.py  exceptions.py  logging_singleton.py  main.py
src/api/: categories.py  form.py  skills.py  unis.py
src/db/: __init__.py  core.py  models.py
src/domain/: __init__.py  models.py
tests/: README.md  builders.py  conftest.py
tests/api/: test_endpoints.py  test_form_validation.py
tests/integration/: test_form_extended.py  test_teams.py  test_workflow.py
tests/unit/: test_domain_models.py
tests/unit/api/: test_error_handlers.py
tests/unit/db/: test_constraints.py
tests/unit/domain/: test_validation.py
