[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "phonenumbers>=9.0.20",
    "psycopg2>=2.9.11",
    "pydantic-extra-types>=2.10.6",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
]
